step version not showing bug.

--- a/src/css/section/workflow/workflow-details.less
+++ b/src/css/section/workflow/workflow-details.less
@@ -270,7 +270,7 @@
   border-radius: 4px;
   // border: 1px solid @color-grey-light;
   border-left: 5px solid @color-grey-light;
-  margin-top: -30px;
+  margin-top: -15px;
   margin-bottom: 30px;
   position: relative;
   // &:before {
